[project]
name = "code_explainer_agent"
version = "0.1.0"
description = "code_explainer_agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.159.0,<1.0.0"
]

[project.scripts]
code_explainer_agent = "code_explainer_agent.main:run"
run_crew = "code_explainer_agent.main:run"
train = "code_explainer_agent.main:train"
replay = "code_explainer_agent.main:replay"
test = "code_explainer_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
